# uniquep-gui

./: MainWindow5.py  README.md  UniquepUI.py  main.py  pyproject.toml  uniquep.db  uniquep.ui
.github/workflows/: pyinstaller.yml
